# alps_heisenberg_tinyvec

./: .gitignore
.svn/: all-wcprops  entries
.svn/text-base/: Makefile.svn-base  main.cpp.svn-base
benchmarks/: CMakeLists.txt  bench_plus.hpp  bench_run.cpp  bench_run_noopt.cpp  bench_run_tv.cpp  bench_run_ur.cpp  bench_run_urm.cpp  bench_run_urv.cpp  bench_verify.cpp
benchmarks/runs/: no_plot.py  results.txt  tvec.py
code-07-mcmain-mcbase/: CMakeLists.txt  ising.hpp
code-07-mcmain-mcbase/test/: result.1.txt  result.txt
dim1/: CMakeLists.txt  Makefile.bak  heisenberg  heisenberg.hpp  param.clone0.h5  param.out.h5
dimN/: .heisenberg.cpp.swp  heisenberg  heisenberg.cpp  heisenberg.hpp  param.clone0.h5  param.out.h5  param.txt
exp/tinyvec_bm/: benchmark.py  bm_minus.txt  bm_plus.txt  bmk2.py  plot.py
heisenberg_lattice/: .heisenberg.hpp.swo  heisenberg.cpp  heisenberg.hpp  single.cpp
heisenberg_lattice/test/: param.txt
heisenberg_lattice/test/phase_transition/: param.txt
ising/: Makefile  ising  param.clone0.h5  param.out.h5
nd_testing/: CMakeLists.txt  avx_math.h  avx_mathfun.h  export.cpp  multiple_of.hpp  ndim_spin.hpp  plus_default.cpp  plus_unroll.cpp  prof_g3_s2_default.cpp  prof_g3_s2_oe.cpp  prof_g3_s2_oe_sse.cpp  prof_g3_s3_default.cpp  prof_g3_s4_default.cpp  prof_g3_s4_oe.cpp  prof_g3_s4_oe4.cpp  prof_g3_s4_oe4_avx.cpp  prof_g3_s4_oe_sse.cpp  prof_g3_s4_unroll.cpp  prof_g3_s4_unroll_avx.cpp  single.cpp  single_4d.cpp  sse_mathfun.h  test.hpp  test_avx_math.cpp  tinyvector.hpp  tinyvector_default.hpp  tinyvector_oe.hpp  tinyvector_oe4.hpp  tinyvector_oe4_avx.hpp  tinyvector_oe_sse.hpp  tinyvector_ultimate.hpp  tinyvector_unroll.hpp  tinyvector_unroll_avx.hpp  tinyvector_unroll_man.hpp  tvec_random_on_sphere.hpp
nd_testing/test/: 3d3d.py  ouput.txt  output.txt  param.txt
nd_testing/test/phase_transition/: plot.py
nd_testing/test/timing/: param.txt
ndim_spin/: CMakeLists.txt  ndim_spin.hpp  single.cpp  single_4d.cpp  spintype.hpp  tinyvector.hpp
ndim_spin/test/phase_transition/: experiment.py  param.txt  plot.py
ndim_spin/test/timing/: param.txt
ndim_spin/tinyvector/: tinyvector_default.hpp
old/: CMakeLists.txt
old/compare/: complot.xml  complot_e.xsl  param.txt  param.txt.in.xml  param.txt.out.xml  param.txt.task1.in.xml  param.txt.task1.out.run1  param.txt.task1.out.xml  run.sh
old/compare/trun1/: run.sh
old/dim1/: CMakeLists.txt  Makefile  heisenberg.cpp  main.cpp
old/dimN/: Makefile  heisenberg.cpp  heisenberg.hpp  out.txt
old/dimN/trun1/: trun1  trun1.in.xml  trun1.task1.in.xml  trun1.task2.in.xml  trun1.task3.in.xml  trun1.task4.in.xml  trun1.task5.in.xml  trun1.task6.in.xml  trun1.task7.in.xml
old/ising/: Makefile  ising.hpp
old/scribble/: veconstr.cpp  vecvec
old/src/: Makefile  heisenberg.cpp
report/: heisenberg.bib  howto.md  make.py  template.html  todo.md
report/tinyvector/: CMakeLists.txt  optimization.tex
report/tinyvector/results/: bench_jobs.sh  plot.py
src/: .heisenberg.cpp.swp  .heisenberg.hpp.swp  heisenberg  heisenberg.cpp  heisenberg.hpp
tinivec/: CMakeLists.txt  bench_divide.cpp  bench_minus.cpp  bench_multiply.cpp  bench_op.hpp  bench_plus.cpp  bench_run.cpp  benchmark.hpp  benchmark_2.hpp  btest.cpp  tinivec.hpp  tinivec_kernels.hpp  tinyvector.hpp  tinyvector_default.hpp  tinyvector_kernels.hpp
vector_test/: tinyvector.hpp  vector_test.hpp
